<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startServer"
        android:id="@+id/buttonServer"
        android:layout_gravity="left|center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStatus"
        android:text="@string/networkStatus"
        android:layout_gravity="left|center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStatusConnect"
        android:text="@string/usbConnectNO"
        android:layout_gravity="left|center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSensorGPS"
        android:text="@string/GPS"
        android:layout_gravity="left|center_vertical" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewKormany"
        android:text="Kormány"
        android:layout_gravity="left|center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewGaz"
        android:text="Gáz-fék"
        android:layout_gravity="left|center_vertical" />



</LinearLayout>