<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".client.ClientActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/textViewStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        android:text="New Text"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <CheckBox
        android:id="@+id/checkBoxGateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultGataway"
        android:layout_below="@id/textViewStat"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/editTextIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localIPcim"
        android:layout_below="@id/checkBoxGateway"
        android:layout_alignParentLeft="true" />


    <TextView
        android:id="@+id/textViewGazMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gazMaxValue"
        android:layout_below="@id/editTextIP"
        android:layout_marginLeft="5dp" />

    <SeekBar
        android:id="@+id/seekBarGazMax"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="25"
        android:progress="8"
        android:layout_below="@id/textViewGazMax" />


    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="90dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectToServer"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/chronometer"
        android:layout_alignParentRight="true" />


    <TextView
        android:id="@+id/textViewGaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/seekBarGaz"
        android:layout_marginRight="15dp" />

    <SeekBar
        android:id="@+id/seekBarGaz"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="25"
        android:rotation="270"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/textViewKormany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:layout_above="@+id/seekBarKormany"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp" />

    <SeekBar
        android:id="@+id/seekBarKormany"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="25"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />


    <hu.zoltan.varadi.rccar.view.AccelerometerView
        android:id="@+id/accelerometerView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="220dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:layout_toRightOf="@id/seekBarKormany"
        android:layout_marginLeft="20dp"
        android:layout_above="@+id/batteryView" />

    <hu.zoltan.varadi.rccar.view.BatteryView
        android:id="@+id/batteryView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/seekBarKormany"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/textViewLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/accelerometerView"
        android:layout_toLeftOf="@+id/accelerometerView" />


</RelativeLayout>